Bug 169351 - Selecting part of an array formula and clicking in Input bar, cannot close the information dialog by clicking OK. Only ESC works. (Linux X11 session, Qt-based UIs)
Summary: Selecting part of an array formula and clicking in Input bar, cannot close th...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Qt6
  Show dependency treegraph
 
Reported: 2025-11-09 08:57 UTC by nobu
Modified: 2025-12-05 08:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (7.83 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-11-25 11:21 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-11-09 08:57:13 UTC
Description:
Selecting part of an array formula and clicking in Input line, cannot close the information dialog.

Note:
If you encounter this issue, you'll likely need to power down your device eventually.
Please close all other applications before checking this bug.

Steps to Reproduce:
1. Open new Calc.
2. Insert [1, 2] into each Cells [A1, A2].
3. Create an array formula "=A1:A2" into Cell [B2].
4. Select Cell [B1].
5. Select "Input line".
6. Information Dialog "You cannot change only part of an array." appears.
7. Push OK Button.

Actual Results:
8. The dialog cannot be closed, making the system unusable.

Expected Results:
8. The dialog can be closed.


Reproducible: Always


User Profile Reset: No

Additional Info:

This issue occurs with some Linux distributions.
VCL: qt5, kf5

Not reproducible
[2025-10-31]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 63b5081fd89140762ed375a04cccfd01c65638a6
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

---

Not reproducible
  A second click will close the dialog.
Version: 25.8.1.1 (X86_64) / LibreOffice Community
Build ID: 580(Build:1)
CPU threads: 2; OS: Linux 6.17; UI render: default; VCL: kf6 (cairo+wayland)
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Ubuntu package version: 4:25.8.1~rc1-0ubuntu1
Calc: threaded

===

Reproducible
[2025-10-31]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 63b5081fd89140762ed375a04cccfd01c65638a6
CPU threads: 2; OS: Linux 6.14; UI render: default; VCL: qt5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

Reproducible
[2025-10-31]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 63b5081fd89140762ed375a04cccfd01c65638a6
CPU threads: 2; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

Reproducible
Version: 25.8.3.1 (X86_64)
Build ID: 52ad9dd1c984050a9fb6932dbfb16e86a49e9758
CPU threads: 2; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 1 nobu 2025-11-16 13:47:32 UTC
Reproducible
[2025-11-13]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d2def868cb3ac5a7e538a911e83d7d907a2ec794
CPU threads: 2; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 2 tkakar 2025-11-17 02:18:29 UTC
Unable to reproduce. After creating the array formula "=A1:A2" in cell B2, the numbers 1 and 2 were populated into cells B2 and B3 respectively. Then selecting B1 and clicking on the input line (formula bar), no error message occurred. 

Tested in:

Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 3 Buovjaga 2025-11-17 19:05:36 UTC
(In reply to nobu from comment #0)
> Steps to Reproduce:
> 1. Open new Calc.
> 2. Insert [1, 2] into each Cells [A1, A2].
> 3. Create an array formula "=A1:A2" into Cell [B2].

This is missing how to create it:
3a: Enter = into B2
3b: With the mouse, select cells A1 and A2
3c: Press Ctrl+Shift+Enter

I don't reproduce the issue. nobu: do you only see this in an X11 session with kf5, not in a Wayland session?

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6e0d9ef6fd8ce744d5a296798e2a4a56ac12b313
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: kf5 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 4 nobu 2025-11-17 22:16:59 UTC
(In reply to Buovjaga from comment #3)

> I don't reproduce the issue. nobu: do you only see this in an X11 session
> with kf5, not in a Wayland session?

I don't understand the IT terminology and abbreviations used by participants here.
Of course, I don't even know what Wayland is, but I've seen references to it in Kubuntu 25.10.
It might be that only the ( +xcb ) component is causing issues.

--- --- --- --- --- --- --- ---
Sorry.
I only just noticed the mistake.
3. Create an array formula "=A1:A2" into Cell [B2].
                                              ^^^^
The correct explanation is below.
3. Create an array formula "=A1:A2" into Cell [B1].
                                              ^^^^
Linux systems where I identified issues :
  Lubuntu 24.04 LTS
  Kubuntu 24.04 LTS

Linux systems where I could not identify issues :
  LMDE 6
  LMDE 7
  Ubuntu 24.04 LTS
  Kubuntu 25.10
  KDE neon

Kubuntu 24.04 LTS was installed via standard installation,
while the others are installed on VirtualBox.

All installations of LibreOffice are parallel installations with the same Bash script.
Comment 5 Buovjaga 2025-11-18 06:06:14 UTC
(In reply to nobu from comment #4)
> (In reply to Buovjaga from comment #3)
> 
> > I don't reproduce the issue. nobu: do you only see this in an X11 session
> > with kf5, not in a Wayland session?
> 
> I don't understand the IT terminology and abbreviations used by participants
> here.

https://ja.wikipedia.org/wiki/X_Window_System
https://ja.wikipedia.org/wiki/Wayland
Comment 6 Buovjaga 2025-11-19 11:18:38 UTC
Please don't set your own reports to NEW without another person confirming them.
Comment 7 Buovjaga 2025-11-25 11:21:39 UTC
Tested in an X11 session and reproduced. The dialog can be closed with Esc, so this is not catastrophic.

I bibisected with linux-64-7.1 and found that with commit e087e25f05e689091cbf1c4f91b6e93878ac17ec a crash started happening upon focus into the Input bar.
weld InputBar

After that the current unclickable state appeared with commit 802dc2fec107585dff333edd709a6fc399663df5
tdf#137713 don't crash if there is no m_xEditView

It seems to me the focus is somehow held in the Input bar and clicks outside ignored.
Comment 8 Buovjaga 2025-11-25 11:21:56 UTC
Created attachment 204275 [details]
Example file
Comment 9 Caolán McNamara 2025-11-27 21:31:01 UTC
I can reproduce something under SAL_USE_VCLPLUGIN=kf5 where I need to click ok twice for it to actually dismiss, while SAL_USE_VCLPLUGIN=gen doesn't have the problem. Certainly looks like a focus problem, probable similar to bug 134688, where launching dialogs on mouse down is problematic.

Maybe reworking this to not continue with the mouse down handler if the error happens might be useful here.
Comment 10 Commit Notification 2025-11-28 10:38:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4d0d96b792584891e96cb0e297ca32d58904601

Related: tdf#169351 pass an explicit handler for input handler error message

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-11-28 15:23:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b0fb6f08ea79a217e1753f5b368d5840865013b6

Resolves: tdf#169351 abandon inputbar mouse down on error dialog

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2025-11-28 15:23:45 UTC
I believe that should work
Comment 13 Buovjaga 2025-11-28 17:49:52 UTC
Seems to work beautifully now.

Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: cbf4d41f0607eb5b99328c4e9c172f92a4b6aea2
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: kf6 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 14 nobu 2025-12-05 08:30:48 UTC
It's working well.
Other distributions that required double-clicking now close with a single click.

Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 9b110cf0e640e67990a3fc43d20fcbed8ce39387
CPU threads: 2; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded