Related: tdf#169351 pass an explicit handler for input handler error message

default it to the current behaviour

Change-Id: Ic99f8120326002c1d1476137cb49b3cee1ef928f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194744
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>